Alignment fix

--- a/style.scss
+++ b/style.scss
@@ -1494,7 +1494,7 @@ animation:move-twink-back 200s linear infinite;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  top: 140%;
+  top: 160%;
   transform: translateY(-95%);
   text-align: center;
   font-family: "Bungee Regular";
@@ -1558,7 +1558,7 @@ animation:move-twink-back 200s linear infinite;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  top: 220%;
+  top: 250%;
   opacity: 0;
   z-index: 3;
   transition: opacity 2s ease-in-out, top 2s ease-in-out;
@@ -1571,7 +1571,7 @@ animation:move-twink-back 200s linear infinite;
   font-family: "Bungee Spicy";
   text-align: center;
   position: absolute;
-  top: 150%;
+  top: 170%;
   opacity: 0;
   transition: opacity 2s ease-in-out, top 2s ease-in-out;
   z-index: 3;
